* Correctly register MIME type. * Don't try to associate with the MIME type for now, because it doesn't   really work yet. * Make the weight entry box allow floats. -Samuel

--- a/shrinkingman.desktop.in
+++ b/shrinkingman.desktop.in
@@ -12,4 +12,4 @@ Terminal=false
 Icon=shrinkingman.png
 Type=Application
 Categories=Application;GNOME;GTK;
-MimeType=text/xml;
+MimeType=application/x-%APP_SYSNAME%;
